# robot_server

./: README.md  docker-compose.yml  test
map/turtlebot_world/: turtlebot_world.building.yaml
rmf/fleet_adapter_template/fleet_adapter_template/: config.yaml
rmf/fleet_adapter_template/fleet_adapter_turtlebot/: config.yaml  setup.cfg  setup.py
rmf/fleet_adapter_template/fleet_adapter_turtlebot/fleet_adapter_turtlebot/: RobotClientAPI.py  fleet_adapter.py
rmf/humble/rmf_deployment_template/: README.md
rmf/humble/rmf_deployment_template/rmf-simulation/: rmf-simulation.Dockerfile
rmf/rmf_deployment_template/rmf-simulation/: rmf-simulation.Dockerfile
rmf/rmf_deployment_template/rmf-web/: rmf-web-dashboard.Dockerfile
turtlebot3/: irontest.Dockerfile  melodictest.Dockerfile  test.py  turtlebot3.Dockerfile
turtlebot3/fleet_adapter_turtlebot3/: package.xml  setup.cfg  setup.py
turtlebot3/fleet_adapter_turtlebot3/config/: turtlebot3_config.yaml
turtlebot3/fleet_adapter_turtlebot3/config/zeta_glhd/: turtlebot3_config.yaml
turtlebot3/fleet_adapter_turtlebot3/fleet_adapter_turtlebot3/: Turtlebot3ClientAPI.py  fleet_adapter.py  fleet_manager.py
turtlebot3/fleet_adapter_turtlebot3/launch/: fleet_adapter.launch.xml
turtlebot3/humble/: humbletest.Dockerfile
turtlebot3/zeta_demos_gz/: CMakeLists.txt  package.xml
turtlebot3/zeta_demos_gz/launch/: tb3_zeta_navigation_launch.py  turtlebot3_world.launch.xml  turtlebot3_zeta_navigation2.launch.py  turtlebot3_zeta_world.launch.xml
turtlebot3/zeta_demos_gz/param/: waffle_pi.yaml
(+59 files in other folders)
